History
=======

Version 0.8.17 - Unreleased
---------------------------

- We now avoid including all zcml from five.intid (in the same way as e.g.
  plone.app.intid) This means we avoid registering the IPersistent handlers,
  which (among other issues) can cause problems for packages that put persistent
  items in temporary storage. Instead we explicitly register handlers for
  ISubscription. The issue is discussed here:
  http://www.mail-archive.com/zodb-dev@zope.org/msg04398.html
  And at length, as pertaining to the getpaid package, here:
  http://code.google.com/p/getpaid/issues/detail?id=209.
  [tmog]

- Reverted changeset 113529 since it broke subscriber searching (and tests).
  The revert has likely reintroduced a problem with deleting subscriptions,
  but I've been unable to reproduce this.
  [tmog]
  
- When importing email addresses, convert all addresses to lowercase
  instead of rejecting them.
  [maurits]

- Update french translation
  [toutpt]

Version 0.8.16 - 2010-04-07
---------------------------

- Fixed translations that were causing compile errors on Zope startup,
  resulting in old translations showing up for a language (taken from
  the outdated .mo file), or no translations at all.
  [maurits]

- Updated Dutch translations.
  [maurits]
  
- Fixed a bug that made it impossible to delete some subscriptions.
  [regebro]

Version 0.8.15 - 2010-02-01
---------------------------

- Added a development buildout and automated test runner setup to the package.
  [hannosch]

- Fixed ConfigurationError: ('Missing parameter:', 'description') on Plone 3
  with the last upgrade steps.
  [toutpt]

Version 0.8.14 - 2010-01-28
---------------------------

- Added missing upgrade steps for all recent versions. This makes the package
  comply with the upgrade logic of the Plone add-ons control panel.
  [hannosch]

- Follow best practice and decouple the profile metadata from the software
  version in setup.py.
  [hannosch]
